[tool.poetry]

name = "template-python"
version = "1.0"
description = "A template for new Python libraries."
authors = ["Jace Browning <jacebrowning@gmail.com>"]

[tool.poetry.dependencies]

python = "^3.11"

cookiecutter = "^2.6.0"

black = "^24.3"
sniffer = "*"
MacFSEvents = { version = "*", platform = "darwin" }
